--- a/config/deploy/production/nginx.conf
+++ b/config/deploy/production/nginx.conf
@@ -1,4 +1,4 @@
-upstream unicorn {
+upstream unicorn2 {
   server unix:/tmp/unicorn.ruby_svg_generator_demo.sock fail_timeout=0;
 }
 
@@ -13,12 +13,12 @@ server {
     add_header Cache-Control public;
   }
 
-  try_files $uri/index.html $uri @unicorn;
-  location @unicorn {
+  try_files $uri/index.html $uri @unicorn2;
+  location @unicorn2 {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://unicorn;
+    proxy_pass http://unicorn2;
   }
 
   error_page 500 502 503 504 /500.html;
