--- a/config/deploy/production/nginx.conf
+++ b/config/deploy/production/nginx.conf
@@ -3,7 +3,7 @@ upstream unicorn2 {
 }
 
 server {
-  listen 80 default_server deferred;
+  listen 80;
   server_name ruby_svg_generator.monkeykoders.net;
   root /home/deploy/rails_apps/ruby_svg_generator_demo/current/public;
 
